--- a/OQ-processing.ipynb
+++ b/OQ-processing.ipynb
@@ -77,9 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "59458d28",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "from openquake.hmtk.parsers.catalogue import *\n",
@@ -115,9 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5d403477",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# baca data katalog yang berada di harddisk\n",
@@ -136,9 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "84f4470f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -167,17 +179,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "617a94a3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "dict_catalogue = {\n",
-    "    \"lat\" : catalogue[\"latitude\"].tolist(),\n",
-    "    \"lon\" : catalogue[\"longitude\"].tolist(),\n",
-    "    \"dep\" : catalogue[\"depth\"].tolist(),\n",
-    "    \"mag\" : catalogue[\"magnitude\"].tolist()\n",
-    "}\n",
+    "idcs = ['eventID','year','month','day','hour',\n",
+    "       'minute','second','longitude','latitude',\n",
+    "       'depth','magnitude','sigmaMagnitude']\n",
+    "\n",
+    "dict_catalogue = dict()\n",
+    "for idx in idcs:\n",
+    "    if isinstance(catalogue[idx], list): \n",
+    "        dict_catalogue[idx] = catalogue[idx]\n",
+    "    else:\n",
+    "        dict_catalogue[idx] = catalogue[idx].tolist()\n",
     "\n",
     "with open('dict_catalogue.pkl', 'wb') as file:\n",
     "    pickle.dump(dict_catalogue, file)"
@@ -193,9 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "47b77f18",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -230,17 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "cf023cf2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "dict_catalogue = {\n",
-    "    \"lat\" : catalogue_declustered[\"latitude\"].tolist(),\n",
-    "    \"lon\" : catalogue_declustered[\"longitude\"].tolist(),\n",
-    "    \"dep\" : catalogue_declustered[\"depth\"].tolist(),\n",
-    "    \"mag\" : catalogue_declustered[\"magnitude\"].tolist()\n",
-    "}\n",
+    "idcs = ['eventID','year','month','day','hour',\n",
+    "       'minute','second','longitude','latitude',\n",
+    "       'depth','magnitude','sigmaMagnitude']\n",
+    "\n",
+    "dict_catalogue = dict()\n",
+    "for idx in idcs:\n",
+    "    if isinstance(catalogue[idx], list): \n",
+    "        dict_catalogue[idx] = catalogue_declustered[idx]\n",
+    "    else:\n",
+    "        dict_catalogue[idx] = catalogue_declustered[idx].tolist()\n",
     "\n",
     "with open('dict_catalogue_declustered.pkl', 'wb') as file:\n",
     "    pickle.dump(dict_catalogue, file)"
@@ -256,9 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "4de3fd4f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -287,9 +323,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "a49d5f02",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -394,9 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "5518dfeb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -428,9 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "15425a7d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -478,7 +526,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "eb667d87",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -548,9 +600,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "b3e30eaa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# fungsi untuk mengubah data lon lat pada patahan menjadi poligon\n",
@@ -571,9 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "d682f964",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# data patahan\n",
@@ -604,9 +664,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "6a2f0da6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "dict_faults = {\n",
@@ -630,9 +694,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "e2852ab1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def shapely_to_OQ_poly(shapely_polygon):\n",
@@ -662,18 +730,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "017c51b2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "dict_catalogue = {\n",
-    "    \"lat\" : catalogue_FaultArea_Depth20km[\"latitude\"].tolist(),\n",
-    "    \"lon\" : catalogue_FaultArea_Depth20km[\"longitude\"].tolist(),\n",
-    "    \"dep\" : catalogue_FaultArea_Depth20km[\"depth\"].tolist(),\n",
-    "    \"mag\" : catalogue_FaultArea_Depth20km[\"magnitude\"].tolist()\n",
-    "}\n",
+    "idcs = ['eventID','year','month','day','hour',\n",
+    "       'minute','second','longitude','latitude',\n",
+    "       'depth','magnitude','sigmaMagnitude']\n",
     "\n",
+    "dict_catalogue = dict()\n",
+    "for idx in idcs:\n",
+    "    if isinstance(catalogue[idx], list): \n",
+    "        dict_catalogue[idx] = catalogue_FaultArea_Depth20km[idx]\n",
+    "    else:\n",
+    "        dict_catalogue[idx] = catalogue_FaultArea_Depth20km[idx].tolist()\n",
+    "    \n",
     "with open('dict_catalogue_FaultArea_Depth20km.pkl', 'wb') as file:\n",
     "    pickle.dump(dict_catalogue, file)"
    ]
@@ -688,9 +764,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "id": "30bb84c9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -754,10 +834,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x14a5c8100>]"
+       "[<matplotlib.lines.Line2D at 0x128eae250>]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -830,7 +910,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "da568316",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -892,9 +976,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "a426335f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "upper_megathrust = np.array([[105.524941802829, -8.71127688943498, 5.0], [105.5, -8.59561634597434, 5.0], [105.4375, -8.4762705564245, 5.0], [105.375, -8.35393314447619, 5.0], [105.25, -8.22852433353212, 5.0], [105.125, -8.15002416179613, 5.0], [104.942927950575, -8.0625, 5.0], [104.662433434494, -7.96131262090033, 5.0], [104.375, -7.90961738585468, 5.0], [104.0625, -7.79665372408826, 5.0], [103.78265711955, -7.6875, 5.0], [103.655440039067, -7.625, 5.0], [103.398213697197, -7.54075699217249, 5.0], [103.170158997736, -7.4375, 5.0], [103.022944583532, -7.36205741423692, 5.0], [102.826375047803, -7.25994336970231, 5.0], [102.66822459172, -7.17068831544382, 5.0], [102.420973415569, -7.01976860304531, 5.0]])\n",
@@ -921,20 +1009,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "ceb40eba",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "dict_catalogue_megathrust = {\n",
-    "    \"lat\" : catalogue_megathrust[\"latitude\"].tolist(),\n",
-    "    \"lon\" : catalogue_megathrust[\"longitude\"].tolist(),\n",
-    "    \"dep\" : catalogue_megathrust[\"depth\"].tolist(),\n",
-    "    \"mag\" : catalogue_megathrust[\"magnitude\"].tolist()\n",
-    "}\n",
+    "idcs = ['eventID','year','month','day','hour',\n",
+    "       'minute','second','longitude','latitude',\n",
+    "       'depth','magnitude','sigmaMagnitude']\n",
     "\n",
+    "dict_catalogue = dict()\n",
+    "for idx in idcs:\n",
+    "    if isinstance(catalogue[idx], list): \n",
+    "        dict_catalogue[idx] = catalogue_megathrust[idx]\n",
+    "    else:\n",
+    "        dict_catalogue[idx] = catalogue_megathrust[idx].tolist()\n",
+    "    \n",
     "with open('dict_catalogue_megathrust.pkl', 'wb') as file:\n",
-    "    pickle.dump(dict_catalogue_megathrust, file)\n",
+    "    pickle.dump(dict_catalogue, file)\n",
     "\n",
     "dict_megathrust = dict()\n",
     "dict_megathrust[\"lon\"], dict_megathrust[\"lat\"] = megathrust.get_surface_boundaries()\n",
@@ -953,9 +1049,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "id": "470b094c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1024,10 +1124,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x14ad5b8b0>]"
+       "[<matplotlib.lines.Line2D at 0x12809ca30>]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1101,9 +1201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "441d6ae4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def remove_events_in_A_from_B(catalogue_A, catalogue_B):\n",
@@ -1123,9 +1227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "04c15cd4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "x = [103.4,103.4,105.98,105.98]\n",
@@ -1148,20 +1256,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "id": "c9b99063",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "dict_catalogue_shallowbackground = {\n",
-    "    \"lat\" : catalogue_ShallowBackground_Depth20km_filtered2[\"latitude\"].tolist(),\n",
-    "    \"lon\" : catalogue_ShallowBackground_Depth20km_filtered2[\"longitude\"].tolist(),\n",
-    "    \"dep\" : catalogue_ShallowBackground_Depth20km_filtered2[\"depth\"].tolist(),\n",
-    "    \"mag\" : catalogue_ShallowBackground_Depth20km_filtered2[\"magnitude\"].tolist()\n",
-    "}\n",
+    "idcs = ['eventID','year','month','day','hour',\n",
+    "       'minute','second','longitude','latitude',\n",
+    "       'depth','magnitude','sigmaMagnitude']\n",
     "\n",
+    "dict_catalogue = dict()\n",
+    "for idx in idcs:\n",
+    "    if isinstance(catalogue[idx], list): \n",
+    "        dict_catalogue[idx] = catalogue_ShallowBackground_Depth20km_filtered2[idx]\n",
+    "    else:\n",
+    "        dict_catalogue[idx] = catalogue_ShallowBackground_Depth20km_filtered2[idx].tolist()\n",
+    "    \n",
     "with open('dict_catalogue_shallowbackground.pkl', 'wb') as file:\n",
-    "    pickle.dump(dict_catalogue_shallowbackground, file)\n",
+    "    pickle.dump(dict_catalogue, file)\n",
     "\n",
     "dict_shallowbackground = dict()\n",
     "dict_shallowbackground[\"lon\"], dict_shallowbackground[\"lat\"] = np.array(polyAreaBg.coords)[:,0], np.array(polyAreaBg.coords)[:,1]\n",
@@ -1180,9 +1296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "id": "50f5e31c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1244,10 +1364,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13fec0d60>]"
+       "[<matplotlib.lines.Line2D at 0x12906a7f0>]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1307,7 +1427,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bfc8c8e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
