modify pygmt ipyb

--- a/OQ-visuals-pygmt.ipynb
+++ b/OQ-visuals-pygmt.ipynb
@@ -19,7 +19,7 @@
     "2. Buat environment pyGMT: `conda create --name pygmt --channel conda-forge pygmt`\n",
     "3. Aktifkan environment `maps`: `conda activate pygmt`\n",
     "4. Install `ipykernel`: `pip install ipykernel`\n",
-    "5. Daftarkan ke dalam kernel: `python -m ipykernel install --name \"maps\" --display-name \"maps\"`"
+    "5. Daftarkan ke dalam kernel: `python -m ipykernel install --name \"pygmt\" --display-name \"pyGMT\"`"
    ]
   },
   {
