add new notebooks

--- a/OQ-visuals-geopandas_deprecated.ipynb
+++ b/OQ-visuals-geopandas_deprecated.ipynb
@@ -21,7 +21,9 @@
     "4. Install `geopandas`: `pip install geopandas`\n",
     "5. Install `matplotlib`: `pip install matplotlib`\n",
     "6. Install `ipykernel`: `pip install ipykernel`\n",
-    "7. Daftarkan ke dalam kernel: `python -m ipykernel install --name \"maps\" --display-name \"maps\"`"
+    "7. Daftarkan ke dalam kernel: `python -m ipykernel install --name \"maps\" --display-name \"maps\"`\n",
+    "\n",
+    "Data yang disimpan dalam format shp dapat digunakan di QGIS"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "87b561eb",
    "metadata": {},
    "outputs": [],
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e24c21",
+   "id": "a9236a8e",
    "metadata": {},
    "source": [
     "### 1.1 Read Indonesia shapefile"
@@ -58,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6ebe388d",
+   "execution_count": 2,
+   "id": "9d7fe35b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shp_coast = gpd.read_file('./ne_10m_land/ne_10m_land.shp')"
+    "shp_coast = gpd.read_file('./coastlines/ne_10m_land.shp')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c4b3cd8",
+   "id": "18eb17cc",
    "metadata": {},
    "source": [
     "### 1.2 Output save function"
@@ -76,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "74f84008",
+   "execution_count": 3,
+   "id": "1f6ca263",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_to_output_dir(gdf, name_file):\n",
-    "    savedir = os.path.join(os.getcwd(), 'output', name_file.split('.')[0])\n",
+    "    savedir = os.path.join(os.getcwd(), 'shp_output', name_file.split('.')[0])\n",
     "    os.makedirs(savedir, exist_ok=True)\n",
     "    gdf.to_file(os.path.join(savedir, name_file))"
    ]
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "id": "75eee5e0",
    "metadata": {},
    "outputs": [
@@ -105,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     },
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "id": "468b09f7",
    "metadata": {},
    "outputs": [
@@ -167,9 +169,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n",
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     },
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "id": "778a89a4",
    "metadata": {},
    "outputs": [
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "d7b466af",
    "metadata": {},
    "outputs": [
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "db7753a9",
    "metadata": {},
    "outputs": [
@@ -339,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     },
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "d32a8871",
    "metadata": {},
    "outputs": [
@@ -406,7 +408,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     },
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "5af036f1",
    "metadata": {},
    "outputs": [
@@ -482,7 +484,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_59482/1766348802.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/var/folders/nm/jd9hzrq57k19r9vm8lk_3c4r0000gn/T/ipykernel_89572/86522253.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     },
