--- a/OQ002_declustering.ipynb
+++ b/OQ002_declustering.ipynb
@@ -118,11 +118,13 @@
     "from openquake.hazardlib.geo.surface.complex_fault import ComplexFaultSurface\n",
     "from shapely.geometry import *\n",
     "from shapely.ops import *\n",
+    "import os\n",
     "import utm\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from copy import deepcopy\n",
-    "import pickle"
+    "import pickle\n",
+    "from custom_openquake import *"
    ]
   },
   {
@@ -135,30 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24879143",
-   "metadata": {},
-   "source": [
-    "### 3.1 Fungsi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "8d7c3b7c",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# membuat colormap diskrit\n",
-    "def get_cmap(n, name='jet'):\n",
-    "    return plt.cm.get_cmap(name, n)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6467d5e2",
    "metadata": {},
    "source": [
@@ -167,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "6583c093",
    "metadata": {
     "vscode": {
@@ -199,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5d403477",
    "metadata": {
     "vscode": {
@@ -224,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "84f4470f",
    "metadata": {
     "vscode": {
@@ -257,7 +235,7 @@
     "time_bin_width = 0.1\n",
     "\n",
     "plt.set_cmap('viridis')\n",
-    "plot_magnitude_time_density (catalogue, magnitude_bin_width, time_bin_width)\n",
+    "plot_magnitude_time_density(catalogue, magnitude_bin_width, time_bin_width)\n",
     "plt.savefig(os.path.join(dir_figs, 'plot_magnitude_time_density-catalogue.png'), dpi=300)"
    ]
   },
@@ -271,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "617a94a3",
    "metadata": {
     "vscode": {
@@ -280,19 +258,7 @@
    },
    "outputs": [],
    "source": [
-    "idcs = ['eventID','year','month','day','hour',\n",
-    "       'minute','second','longitude','latitude',\n",
-    "       'depth','magnitude','sigmaMagnitude']\n",
-    "\n",
-    "dict_catalogue = dict()\n",
-    "for idx in idcs:\n",
-    "    if isinstance(catalogue[idx], list): \n",
-    "        dict_catalogue[idx] = catalogue[idx]\n",
-    "    else:\n",
-    "        dict_catalogue[idx] = catalogue[idx].tolist()\n",
-    "\n",
-    "with open('dict_catalogue.pkl', 'wb') as file:\n",
-    "    pickle.dump(dict_catalogue, file)"
+    "catalogue_to_pkl(catalogue, 'dict_catalogue.pkl')"
    ]
   },
   {
@@ -313,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "47b77f18",
    "metadata": {
     "vscode": {
@@ -334,11 +300,7 @@
     "declust_config = {'time_distance_window': UhrhammerWindow() ,\n",
     "                  'fs_time_prop': 1.0}\n",
     "\n",
-    "declustering = GardnerKnopoffType1()\n",
-    "cluster_index, cluster_flag = declustering.decluster(catalogue, declust_config)\n",
-    "\n",
-    "selectorCatalogue = CatalogueSelector(catalogue, create_copy = True)\n",
-    "catalogue_declustered = selectorCatalogue.select_catalogue(cluster_flag == 0)\n",
+    "catalogue_declustered = catalogue_declustering(catalogue, declust_config)\n",
     "\n",
     "print(\"sebelum didekluster: \", len(catalogue['eventID']), \" events\")\n",
     "print(\"setelah didekluster: \", len(catalogue_declustered['eventID']), \" events\")"
@@ -354,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cf023cf2",
    "metadata": {
     "vscode": {
@@ -363,19 +325,29 @@
    },
    "outputs": [],
    "source": [
-    "idcs = ['eventID','year','month','day','hour',\n",
-    "       'minute','second','longitude','latitude',\n",
-    "       'depth','magnitude','sigmaMagnitude']\n",
-    "\n",
-    "dict_catalogue = dict()\n",
-    "for idx in idcs:\n",
-    "    if isinstance(catalogue[idx], list): \n",
-    "        dict_catalogue[idx] = catalogue_declustered[idx]\n",
-    "    else:\n",
-    "        dict_catalogue[idx] = catalogue_declustered[idx].tolist()\n",
-    "\n",
-    "with open('dict_catalogue_declustered.pkl', 'wb') as file:\n",
-    "    pickle.dump(dict_catalogue, file)"
+    "catalogue_to_pkl(catalogue_declustered, 'dict_catalogue_declustered.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0adb1df",
+   "metadata": {},
+   "source": [
+    "### 5.3 Simpan data katalog ke format pkl khusus untuk dibaca di OQ004"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c85791dc",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "variable_to_pkl(catalogue_declustered, 'tmp_OQ002_catalogue_declustered.pkl')"
    ]
   },
   {
@@ -388,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "4de3fd4f",
    "metadata": {
     "vscode": {
@@ -435,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a49d5f02",
    "metadata": {
     "scrolled": true,
@@ -520,16 +492,14 @@
     }
    ],
    "source": [
-    "completeness_algorithm = Stepp1971()\n",
-    "\n",
     "comp_config = {'magnitude_bin': 0.1,\n",
     "                'time_bin': 5. ,\n",
     "                'increment_lock': True }\n",
     "\n",
-    "completeness_table_old = completeness_algorithm.completeness(catalogue_declustered, comp_config)\n",
-    "completeness_algorithm.simplify(mag_range=[3., 5.])\n",
-    "completeness_table = completeness_algorithm.completeness_table\n",
-    "Mc_declustered = completeness_table\n",
+    "completeness_table, completeness_table_old = magnitude_of_completeness(\n",
+    "    catalogue_declustered, \n",
+    "    comp_config, \n",
+    "    mag_range=[3., 5.])\n",
     "\n",
     "print(\"== Keseluruhan Mc ==\")\n",
     "print(completeness_table_old)\n",
@@ -547,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "5518dfeb",
    "metadata": {
     "vscode": {
@@ -579,13 +549,10 @@
     "magnitude_bin_width = 0.1\n",
     "time_bin_width = 0.1\n",
     "\n",
-    "plt.set_cmap('Pastel1')\n",
-    "plot_magnitude_time_density(catalogue_declustered, magnitude_bin_width, time_bin_width)\n",
-    "cmap = get_cmap(len(completeness_table[:,0]), 'Dark2')\n",
-    "for i, (v, h) in enumerate(zip(completeness_table[:,0],completeness_table[:,1])):\n",
-    "    plt.axvline(v, c=cmap(i), label=f\"{v:.0f}, Mc {h:.2f}\")\n",
-    "    plt.axhline(h, c=cmap(i))\n",
-    "plt.legend()\n",
+    "plot_magnitude_time_density_with_Mc(\n",
+    "    catalogue_declustered, completeness_table, magnitude_bin_width, \n",
+    "    time_bin_width, cmap_dist='Pastel1', cmap_Mc='Dark2')\n",
+    "\n",
     "plt.savefig(os.path.join(dir_figs, 'plot_magnitude_time_density_Mc-catalogue_declustered.png'), dpi=300)"
    ]
   },
@@ -599,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "15425a7d",
    "metadata": {
     "vscode": {
@@ -621,11 +588,10 @@
    "source": [
     "magnitude_bin_width = 0.1\n",
     "\n",
-    "plot_observed_recurrence(catalogue_declustered, completeness_table_old, magnitude_bin_width)\n",
-    "cmap = get_cmap(len(completeness_table[:,0]), 'Dark2')\n",
-    "for i, (v, h) in enumerate(zip(completeness_table[:,0],completeness_table[:,1])):\n",
-    "    plt.axvline(h, c=cmap(i), label=f\"{v:.0f}, Mc {h:.2f}\")\n",
-    "plt.legend()\n",
+    "plot_observed_reccurence_with_Mc(\n",
+    "    catalogue_declustered, completeness_table, completeness_table_old, \n",
+    "    magnitude_bin_width, cmap_Mc='Dark2')\n",
+    "\n",
     "plt.savefig(os.path.join(dir_figs, 'plot_observed_recurrence_Mc-catalogue_declustered.png'), dpi=300)"
    ]
   },
