add new notebooks

--- a/OQ001_mengestimasi_area_katalog.ipynb
+++ b/OQ001_mengestimasi_area_katalog.ipynb
@@ -48,7 +48,8 @@
     "from shapely.geometry import Point, LineString, Polygon\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.lines import Line2D"
+    "from matplotlib.lines import Line2D\n",
+    "from custom_maps import *"
    ]
   },
   {
@@ -153,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9baece4f",
+   "id": "f1dbfcb1",
    "metadata": {},
    "outputs": [],
    "source": []
