--- a/OQ006_menghindari_double_counting.ipynb
+++ b/OQ006_menghindari_double_counting.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "5d403477",
    "metadata": {
     "vscode": {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8a36265b",
    "metadata": {},
    "outputs": [
@@ -256,13 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "4a4d510e",
    "metadata": {},
    "outputs": [],
    "source": [
     "catalogue_to_pkl(catalogue_sumatera_fault_filt_2, \"dict_catalogue_sumatera_fault_filt_2.pkl\")\n",
     "catalogue_to_pkl(catalogue_mentawai_fault_filt_2, \"dict_catalogue_mentawai_fault_filt_2.pkl\")\n",
+    "catalogue_to_pkl(catalogue_megathrust_1, \"dict_catalogue_megathrust_1.pkl\")\n",
+    "catalogue_to_pkl(catalogue_megathrust_2, \"dict_catalogue_megathrust_2.pkl\")\n",
     "catalogue_to_pkl(catalogue_shallow_background_1_filt_4, \"dict_catalogue_shallow_background_1_filt_4.pkl\")\n",
     "catalogue_to_pkl(catalogue_deep_background_1_1_filt_2, \"dict_catalogue_deep_background_1_1_filt_2.pkl\")\n",
     "catalogue_to_pkl(catalogue_deep_background_1_2_filt_3, \"dict_catalogue_deep_background_1_2_filt_3.pkl\")\n",
@@ -279,7 +281,7 @@
     "        catalogue_deep_background_1_2_filt_3,\n",
     "        catalogue_deep_background_1_3_filt_3\n",
     "    ),\n",
-    "    \"tmp_OQ004_catalogues_filtered.pkl\"\n",
+    "    \"tmp_OQ006_catalogues_filtered.pkl\"\n",
     ")"
    ]
   },
