--- a/OQ009_a_b_value.ipynb
+++ b/OQ009_a_b_value.ipynb
@@ -146,8 +146,6 @@
    "outputs": [],
    "source": [
     "# membuka data pkl\n",
-    "catalogue_area_faults = open_pkl(\"tmp_OQ004_catalogue_area_faults.pkl\")\n",
-    "\n",
     "(catalogue_sumatera_fault_filt_2, \n",
     " catalogue_mentawai_fault_filt_2, \n",
     " catalogue_megathrust_1, \n",
@@ -155,7 +153,7 @@
     " catalogue_shallow_background_1_filt_4, \n",
     " catalogue_deep_background_1_1_filt_2, \n",
     " catalogue_deep_background_1_2_filt_3, \n",
-    " catalogue_deep_background_1_3_filt_3) = open_pkl(\"tmp_OQ004_catalogues_filtered.pkl\")"
+    " catalogue_deep_background_1_3_filt_3) = open_pkl(\"tmp_OQ006_catalogues_filtered.pkl\")"
    ]
   },
   {
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b0066ae1",
    "metadata": {},
    "outputs": [
@@ -306,17 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "4fa064e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16454bb50>"
+       "<matplotlib.legend.Legend at 0x15b12da90>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
