--- a/Template_maps.ipynb
+++ b/Template_maps.ipynb
@@ -5,7 +5,7 @@
    "id": "4b08976c",
    "metadata": {},
    "source": [
-    "# Simpan data katalog ke shp"
+    "# Template maps"
    ]
   },
   {
@@ -57,60 +57,13 @@
    "id": "f0412017",
    "metadata": {},
    "source": [
-    "## 2. Simpan dict katalog ke shp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c786d961",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yudhastyawan/Documents/projects/openquake/Seismologi-Teknik-OQ/custom_maps.py:50: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  gdf.to_file(os.path.join(savedir, name_file))\n"
-     ]
-    }
-   ],
-   "source": [
-    "catalogue_sumatera_fault_filt_2 = open_pkl(\"dict_catalogue_sumatera_fault_filt_2.pkl\")\n",
-    "catalogue_to_shp(catalogue_sumatera_fault_filt_2, \"catalogue_sumatera_fault_filt_2.shp\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06b6686f",
-   "metadata": {},
-   "source": [
-    "## 3. Simpan area faults ke shp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9baece4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# buka koordinat area faults\n",
-    "area_faults_coords = open_pkl(\"tmp_OQ004_area_faults_coords.pkl\")\n",
-    "\n",
-    "area_sumatera_faults = Polygon(area_faults_coords[\"merged\"][0])\n",
-    "area_mentawai_fault = Polygon(area_faults_coords[\"individual\"][0])\n",
-    "\n",
-    "polygon_to_shp(area_sumatera_faults, \"area_sumatera_faults.shp\")\n",
-    "polygon_to_shp(area_mentawai_fault, \"area_mentawai_fault.shp\")"
+    "## 2. Lakukan di bawah ini"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835e7b64",
+   "id": "9baece4f",
    "metadata": {},
    "outputs": [],
    "source": []
