--- a/OQ003_geometri_sumber_gempa.ipynb
+++ b/OQ003_geometri_sumber_gempa.ipynb
@@ -31,7 +31,7 @@
    "id": "14ac00b8",
    "metadata": {},
    "source": [
-    "## 1. Import packages"
+    "## 1. Import packages dan variabel tambahan"
    ]
   },
   {
@@ -41,42 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pickle\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point, LineString, Polygon\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.lines import Line2D\n",
-    "from custom_maps import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "371ef2e8",
-   "metadata": {},
-   "source": [
-    "## 2. Tambahan"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3909129",
-   "metadata": {},
-   "source": [
-    "### 2.2 Variabel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "35daf29a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# packages\n",
+    "from custom_maps import *\n",
+    "\n",
     "# open coastal area\n",
-    "shp_coast = gpd.read_file('./coastlines/ne_10m_land.shp')"
+    "shp_coast = gpd.read_file('./coastlines/ne_10m_land.shp')\n",
+    "\n",
+    "# folder penyimpanan\n",
+    "dir_figs = os.path.join(os.getcwd(), 'figs')\n",
+    "os.makedirs(dir_figs, exist_ok=True)"
    ]
   },
   {
@@ -89,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7bf5c2dc",
    "metadata": {},
    "outputs": [
@@ -117,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a3e54c7b",
    "metadata": {},
    "outputs": [],
@@ -132,10 +105,10 @@
     "    ]\n",
     "}\n",
     "\n",
-    "faults = select_faults(gdf_faults, dict_config)\n",
+    "fault_geoms = select_faults(gdf_faults, dict_config)\n",
     "\n",
     "# save to pkl\n",
-    "variable_to_pkl(faults, 'tmp_OQ003_faults.pkl')"
+    "variable_to_pkl(fault_geoms, 'tmp_OQ003_fault_geoms.pkl')"
    ]
   },
   {
@@ -146,7 +119,7 @@
     "**catatan:**\n",
     "\n",
     "konfigurasi patahan (cek berdasarkan indeks gdf_faults)\n",
-    "```\n",
+    "```python\n",
     "dict_config = {\n",
     "    \"merged\": [\n",
     "        [0,1,2,3,4,5,6],\n",
@@ -159,7 +132,7 @@
     "```\n",
     "\n",
     "contoh konfigurasi apabila diantaranya tidak ada\n",
-    "```\n",
+    "```python\n",
     "dict_config = {\n",
     "    \"merged\": [\n",
     "        [0,1,2,3],\n",
@@ -169,7 +142,7 @@
     "}\n",
     "```\n",
     "atau\n",
-    "```\n",
+    "```python\n",
     "dict_config = {\n",
     "    \"merged\": None,\n",
     "    \"individual\": [\n",
@@ -189,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9baece4f",
    "metadata": {},
    "outputs": [],
@@ -200,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9a747a08",
    "metadata": {},
    "outputs": [
@@ -235,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc3b5699",
    "metadata": {},
    "outputs": [
@@ -251,7 +224,9 @@
     "idcs = [4, 6]\n",
     "upper_configs = ['r', 'r']\n",
     "megathrust_geoms = create_megathrust_coords(gdf_megathrusts, idcs, upper_configs, upper_depth=0, lower_depth=50)\n",
-    "print(megathrust_geoms)"
+    "print(megathrust_geoms)\n",
+    "\n",
+    "variable_to_pkl(megathrust_geoms, \"tmp_OQ003_megathrust_geoms.pkl\")"
    ]
   },
   {
@@ -264,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3cb93426",
    "metadata": {},
    "outputs": [],
@@ -289,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e150d840",
    "metadata": {},
    "outputs": [],
