--- a/OQ002_declustering.ipynb
+++ b/OQ002_declustering.ipynb
@@ -80,7 +80,7 @@
    "id": "41fb843b",
    "metadata": {},
    "source": [
-    "## 2. Import packages"
+    "## 2. Import packages dan variabel tambahan"
    ]
   },
   {
@@ -102,58 +102,9 @@
    },
    "outputs": [],
    "source": [
-    "from openquake.hmtk.parsers.catalogue import *\n",
-    "from openquake.hmtk.plotting.seismicity.catalogue_plots import *\n",
-    "from openquake.hmtk.seismicity.declusterer.dec_gardner_knopoff import *\n",
-    "from openquake.hmtk.seismicity.declusterer.distance_time_windows import *\n",
-    "from openquake.hmtk.seismicity.selector import *\n",
-    "from openquake.hazardlib.geo.polygon import Polygon as PolyOQ\n",
-    "from openquake.hazardlib.geo.point import Point as PointOQ\n",
-    "from openquake.hazardlib.geo.line import Line as LineOQ\n",
-    "from openquake.hmtk.seismicity.completeness.comp_stepp_1971 import Stepp1971\n",
-    "from openquake.hmtk.seismicity.occurrence.b_maximum_likelihood import BMaxLikelihood\n",
-    "from openquake.hmtk.plotting.seismicity.completeness.plot_stepp_1972 import create_stepp_plot\n",
-    "from openquake.hmtk.seismicity.smoothing.smoothed_seismicity import SmoothedSeismicity\n",
-    "from openquake.hmtk.seismicity.smoothing.kernels.isotropic_gaussian import IsotropicGaussian\n",
-    "from openquake.hazardlib.geo.surface.complex_fault import ComplexFaultSurface\n",
-    "from shapely.geometry import *\n",
-    "from shapely.ops import *\n",
-    "import os\n",
-    "import utm\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from copy import deepcopy\n",
-    "import pickle\n",
-    "from custom_openquake import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d01ab0e9",
-   "metadata": {},
-   "source": [
-    "## 3. Tambahan"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6467d5e2",
-   "metadata": {},
-   "source": [
-    "### 3.2 Variabel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6583c093",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "# packages\n",
+    "from custom_openquake import *\n",
+    "\n",
     "# folder penyimpanan\n",
     "dir_figs = os.path.join(os.getcwd(), 'figs')\n",
     "os.makedirs(dir_figs, exist_ok=True)"
@@ -177,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5d403477",
    "metadata": {
     "vscode": {
@@ -202,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "84f4470f",
    "metadata": {
     "vscode": {
@@ -249,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "617a94a3",
    "metadata": {
     "vscode": {
@@ -279,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "47b77f18",
    "metadata": {
     "vscode": {
@@ -316,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cf023cf2",
    "metadata": {
     "vscode": {
@@ -338,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c85791dc",
    "metadata": {
     "vscode": {
@@ -360,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4de3fd4f",
    "metadata": {
     "vscode": {
@@ -407,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a49d5f02",
    "metadata": {
     "scrolled": true,
@@ -517,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5518dfeb",
    "metadata": {
     "vscode": {
@@ -566,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "15425a7d",
    "metadata": {
     "vscode": {
