modify the notebooks

--- a/OQ007_simpan_katalog_ke_shp.ipynb
+++ b/OQ007_simpan_katalog_ke_shp.ipynb
@@ -41,14 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pickle\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point, LineString, Polygon\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.lines import Line2D\n",
     "from custom_maps import *"
    ]
   },
@@ -72,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/yudhastyawan/Documents/projects/openquake/Seismologi-Teknik-OQ/custom_maps.py:53: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "Z:\\Proyek\\PYTHON\\Seismologi-Teknik-OQ\\custom_maps.py:53: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     }
